[metadata]
name = stow
version = 1.4.0
author = Kieran Bacon
author_email = kieran.bacon@outlook.com
description = stow artefacts anywhere, with ease
long_description  = file: docs/index.md
long_description_content_type = text/markdown
test_suite = tests
keywords = aws s3 boto3 ssh os
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
project_urls =
    Homepage = https://github.com/Kieran-Bacon/stow
    Documentation = https://stow.readthedocs.io/en/latest/
    Bug Tracker = https://github.com/Kieran-Bacon/stow/issues


[options]
# python_requires = >=3.7
install_requires =
    tqdm
    typing_extensions
package_dir =
    stow = stow

[options.extras_require]
all =
    boto3
    click
    click-option-group
    google-api-python-client
    google-auth-httplib2
    google-auth-oauthlib
cli =
    click
    click-option-group
s3 =
    boto3
drive =
    google-api-python-client
    google-auth-httplib2
    google-auth-oauthlib
test =
    pyini
    pytest
    pytest-cov
    moto[s3]>=4.1.5.dev40
    mkdocs
    mkdocstrings[python]==0.22.0
    click
    click-option-group
    boto3-stubs[s3]
    crc32c

[options.entry_points]
console_scripts = stow=stow.cli:cli
stow_managers =
    fs = stow.managers:FS
    s3 = stow.managers.amazon:Amazon
    k8s = stow.managers.kubernetes:Kubernetes
